--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -178,8 +178,8 @@ jobs:
           print(f"Test status chart saved as HTML: {OUTPUT_HTML}")
           EOF
 
-      - name: Upload Test Status Chart
+      - name: Upload HTML Test Report
         uses: actions/upload-artifact@v4
         with:
-          name: test-status-chart
-          path: test_status_chart.html
+          name: test-report
+          path: test-report.html
