--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           grep -oP '<testcase name="[^"]+" classname="[^"]+" time="[^"]+"' "test-results-${{ github.run_id }}.xml" | while read -r line; do
             TEST_NAME=$(echo "$line" | grep -oP '(?<=classname=")[^"]+')
             ESCAPED_TEST_NAME=$(echo "$TEST_NAME" | sed 's/|/\\|/g')
-            echo "| \$ESCAPED_TEST_NAME\ |" >> "$GITHUB_STEP_SUMMARY"
+            echo "| \'$ESCAPED_TEST_NAME\' |" >> "$GITHUB_STEP_SUMMARY"
           done
       
           # Highlight test results
