Update Collect and Merge JUnit Test Reports.yml

--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -53,6 +53,9 @@ jobs:
             echo "Downloading artifacts from workflow run: $RUN_ID"
             gh run download $RUN_ID --dir all-test-results || echo "No artifacts found for $RUN_ID"
           done
+          
+          env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Install junitparser for Merging JUnit XML
         run: pip install junitparser
