--- a/.github/workflows/QRA_PROD.yml
+++ b/.github/workflows/QRA_PROD.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run QRA Stage Suite
+      - name: Run QRA Production Suite
         id: run-bugbug-tests
         uses: bugbug-io/bugbug-github-action@v1.2.1
         with:
