--- a/.github/workflows/Collect and Merge JUnit Test Reports.yml
+++ b/.github/workflows/Collect and Merge JUnit Test Reports.yml
@@ -225,8 +225,8 @@ jobs:
           server_port: 465
           username: ${{ secrets.SMTP_USER }}
           password: ${{ secrets.SMTP_PASS }}
-          subject: "CI Test Report"
-          body: "Tests have completed. See attached report."
+          subject: "CI Test Report - ${{ github.event.inputs.workflow_name }}"
+          body: "Tests have completed for '${{ github.event.inputs.workflow_name }}'. See attached report."
           to: michael.naguit@technocrat.com.au
           from: GitHub Actions <${{ secrets.SMTP_USER }}>
           attachments: test-report.html
